--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/layout/main/layout-main.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/layout/main/layout-main.html
@@ -1,5 +1,4 @@
 <template>
   <require from="../header/layout-header"></require>
-  <layout-header></layout-header>
-  this is layout main
+  <layout-header router.bind="router"></layout-header>
 </template>
