--- a/Hahn-ApplicatonProcess-December2020-ClientApp/index.ejs
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Aurelia Navigation Skeleton</title>
+    <title>Aurelia App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="<%- htmlWebpackPlugin.options.metadata.baseUrl %>">
     <link rel="icon" href="favicon.ico">
@@ -10,4 +10,5 @@
   </head>
   <body aurelia-app="main">
   </body>
+  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 </html>
