--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/layout/main/layout-main.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/layout/main/layout-main.html
@@ -1,4 +1,5 @@
 <template>
   <require from="../header/layout-header"></require>
   <layout-header router.bind="router"></layout-header>
+  <router-view></router-view>
 </template>
