--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/home/home.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/home/home.html
@@ -12,8 +12,8 @@
         <input
          type="text"
          class="form-control" 
-         placeholder="${ 'base.search' & t}" 
-         aria-label="${ 'base.search' & t}" aria-describedby="search-icon"
+         placeholder="${'base.search' & t}" 
+         aria-label="${'base.search' & t}" aria-describedby="search-icon"
          value.bind="searchTerm"
          input.delegate="handleSearch()"
          >
@@ -23,51 +23,57 @@
       <button type="button" class="btn btn-icon btn-outline-info" click.trigger="loadData()">
         <span class="iconify" data-icon="ic:twotone-refresh" data-inline="false"></span>
       </button>
-      <a class="btn btn-outline-success" href="#/applicant/add">New</a>
+      <a class="btn btn-outline-success" href="#/applicant/edit">${'base.new' & t}</a>
     </div>
   </div>
   <div class="row mt-2">
     <div class="col">
       <div class="table-responsive">
-        <table class="table table-bordered">
+        <table class="table table-bordered shadow-sm">
           <thead>
             <tr>
               <th scope="col">#</th>
-              <th scope="col">${ 'data.title.name' & t}</th>
-              <th scope="col">${ 'data.title.familyname' & t}</th>
-              <th scope="col">${ 'data.title.address' & t}</th>
-              <th scope="col">${ 'data.title.countryoforigin' & t}</th>
-              <th scope="col">${ 'data.title.emailaddress' & t}</th>
-              <th scope="col">${ 'data.title.age' & t}</th>
-              <th scope="col">${ 'data.title.ishired' & t}</th>
+              <th scope="col">${'data.title.name' & t}</th>
+              <th scope="col">${'data.title.familyname' & t}</th>
+              <th scope="col">${'data.title.address' & t}</th>
+              <th scope="col">${'data.title.countryoforigin' & t}</th>
+              <th scope="col">${'data.title.emailaddress' & t}</th>
+              <th scope="col">${'data.title.age' & t}</th>
+              <th scope="col">${'data.title.ishired' & t}</th>
+              <th scope="col">${'data.actions' & t}</th>
             </tr>
           </thead>
           <tbody>
             <tr if.bind="isRequesting">
-              <td colspan="8">
+              <td colspan="9">
                 <loader></loader>
               </td>
             </tr>
             <tr if.bind="!isRequesting && isError">
-              <td colspan="8">Error will be here</td>
+              <td colspan="9">Error will be here</td>
             </tr>
             <tr if.bind="!isRequesting && !isError" repeat.for="applicant of filteredApplicants">
-              <td>${ applicant.id }</td>
-              <td>${ applicant.name }</td>
-              <td>${ applicant.familyName }</td>
-              <td>${ applicant.address }</td>
-              <td>${ applicant.countryOfOrigin }</td>
-              <td>${ applicant.emailAddress }</td>
-              <td>${ applicant.age }</td>
-              <td class="${ applicant.hired ? 'text-success':'text-danger' }">
-                ${ ('base.' + (applicant.hired ? 'yes': 'no')) & t}
+              <td>${applicant.id}</td>
+              <td>${applicant.name}</td>
+              <td>${applicant.familyName}</td>
+              <td>${applicant.address}</td>
+              <td>${applicant.countryOfOrigin}</td>
+              <td>${applicant.emailAddress}</td>
+              <td>${applicant.age}</td>
+              <td class="${applicant.hired ? 'text-success':'text-danger'}">
+                ${('base.' + (applicant.hired ? 'yes': 'no')) & t}
+              </td>
+              <td>
+                <a href="#/applicant/edit/${applicant.id}">${'data.edit' & t}</a>
+                /
+                <a href="#">${'data.delete' & t}</a>
               </td>
             </tr>
           </tbody>
           <tfoot>
             <tr>
-              <td colspan="8" class="text-right">
-                <strong>${ 'data.total' & t }</strong> ${ filteredApplicants.length }
+              <td colspan="9" class="text-right">
+                <strong>${'data.total' & t}</strong>${filteredApplicants.length}
               </td>
             </tr>
           </tfoot>
