End of the Day -Form Reset Button Feature -Fixes/Renaming

--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/applicant/edit-applicant.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/applicant/edit-applicant.html
@@ -1,6 +1,6 @@
 <template>
   <div class="container w-50 shadow-lg p-4 rounded">
-    <form>
+    <form submit.trigger="save()">
       <div class="form-row">
         <div class="col-md-4 mb-3">
           <label for="name">${ 'data.title.name' & t }</label>
@@ -97,7 +97,7 @@
         </div>
       </div>
       <div class="form-group text-right">
-        <button class="btn btn-outline-warning" type="submit">${ 'base.reset' & t}</button>
+        <button class="btn btn-outline-warning" type="button" disabled.bind="test">${ 'base.reset' & t}</button>
         <button class="btn btn-primary" type="submit">${ (editMode ? 'base.update' : 'base.send') & t}</button>
       </div>
     </form>
