--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/layout/header/layout-header.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/layout/header/layout-header.html
@@ -31,6 +31,9 @@
             </div>
           </div>
         </li>
+        <li class="nav-item">          
+          <a class="nav-link" href="#/about">${ 'header.routes.about' & t}</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href.bind="swaggerUrl" target="_blank">${ 'header.swaggerui' & t}</a>
         </li>
