--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/styles.css
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/styles.css
@@ -1,9 +1,12 @@
+body {
+  font-family: 'Nunito', sans-serif;
+}
 .iconify-big {
   width: 30px;
   height: 30px;
 }
 
-/* to show iconify  icons on the middle */
+/* to show iconify  icons in the middle on bootstrap buttons */
 .btn-icon {
   padding-bottom: 8px;
   padding-top: 4px;
