--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/applicant/edit-applicant.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/applicant/edit-applicant.html
@@ -3,85 +3,88 @@
     <form submit.trigger="save()">
       <div class="form-row">
         <div class="col-md-4 mb-3">
-          <label for="name">${ 'data.title.name' & t }</label>
-          <input
-            type="text"
-            class="form-control"
-            id="name"
-            placeholder="${ 'data.title.name' & t }"
-            value.bind="applicant.name & validate:rules"
-            required
-          />
+          <div class="form-group">
+            <label for="name">${ 'data.title.name' & t }</label>
+            <input
+              type="text"
+              class="form-control"
+              id="name"
+              placeholder="${ 'data.title.name' & t }"
+              value.bind="applicant.name & validate:validator.rules"
+              required
+            />
+          </div>
         </div>
         <div class="col-md-6 mb-3">
-          <label for="familyName">${ 'data.title.familyname' & t }</label>
-          <input
-            type="text"
-            class="form-control is-valid"
-            id="familyName"
-            placeholder="${ 'data.title.familyname' & t }"
-            value.bind="applicant.familyName & validate:rules"
-            required
-          />
-
-          <div class="valid-feedback">Looks good!</div>
+          <div class="form-group">
+            <label for="familyName">${ 'data.title.familyname' & t }</label>
+            <input
+              type="text"
+              class="form-control"
+              id="familyName"
+              placeholder="${ 'data.title.familyname' & t }"
+              value.bind="applicant.familyName & validate:validator.rules"
+              required
+            />
+          </div>
         </div>
         <div class="col-md-2 mb-3">
-          <label for="validationServer03">${ 'data.title.age' & t }</label>
-          <input
-            type="text"
-            class="form-control is-valid"
-            id="validationServer03"
-            placeholder="${ 'data.title.age' & t }"
-            value.bind="applicant.age & validate:rules"
-            required
-          />
-
-          <div class="invalid-feedback">Age must be between 25 - 60</div>
+          <div class="form-group">
+            <label for="validationServer03">${ 'data.title.age' & t }</label>
+            <input
+              type="text"
+              class="form-control"
+              id="validationServer03"
+              placeholder="${ 'data.title.age' & t }"
+              value.bind="applicant.age & validate:validator.rules"
+              required
+            />
+          </div>
         </div>
       </div>
       <div class="form-row">
         <div class="col-md-12 mb-3">
-          <label for="emailAddress">${ 'data.title.emailaddress' & t }</label>
-          <input
-            type="text"
-            class="form-control is-invalid"
-            id="emailAddress"
-            placeholder="${ 'data.title.emailaddress' & t }"
-            value.bind="applicant.emailAddress"
-            required
-          />
-
-          <div class="invalid-feedback">Email is invalid</div>
+          <div class="form-group">
+            <label for="emailAddress">${ 'data.title.emailaddress' & t }</label>
+            <input
+              type="text"
+              class="form-control"
+              id="emailAddress"
+              placeholder="${ 'data.title.emailaddress' & t }"
+              value.bind="applicant.emailAddress & validate:validator.rules"
+              required
+            />
+          </div>
         </div>
       </div>
       <div class="form-row">
         <div class="col-md-8 mb-3">
-          <label for="validationServer04">${ 'data.title.address' & t}</label>
-          <input
-            type="text"
-            class="form-control is-invalid"
-            id="validationServer04"
-            placeholder="${ 'data.title.address' & t}"
-            value.bind="applicant.address"
-            required
-          />
-
-          <div class="invalid-feedback">Please provide a valid address.</div>
+          <div class="form-group">
+            <label for="validationServer04">${ 'data.title.address' & t}</label>
+            <input
+              type="text"
+              class="form-control"
+              id="validationServer04"
+              placeholder="${ 'data.title.address' & t}"
+              value.bind="applicant.address & validate:validator.rules"
+              required
+            />
+          </div>
         </div>
         <div class="col-md-4 mb-3">
-          <label for="validationServer05"
-            >${ 'data.title.countryoforigin' & t}</label
-          >
-          <input
-            type="text"
-            class="form-control is-invalid"
-            id="validationServer05"
-            placeholder="${ 'data.title.countryoforigin' & t}"
-            value.bind="applicant.countryOfOrigin"
-            required
-          />
-          <div class="invalid-feedback">Please provide a valid country.</div>
+          <div class="form-group">
+            <label for="validationServer05"
+              >${ 'data.title.countryoforigin' & t}</label
+            >
+            <input
+              type="text"
+              class="form-control"
+              id="validationServer05"
+              placeholder="${ 'data.title.countryoforigin' & t}"
+              value.bind="applicant.countryOfOrigin & validate:validator.rules"
+              required
+            />
+          </div>
         </div>
       </div>
       <div class="form-group">
@@ -90,8 +93,7 @@
             class="form-check-input"
             type="checkbox"
             id="isHired"
-            checked.bind="applicant.hired"
-            required
+            checked.bind="applicant.hired & validate:validator.rules"
           />
           <label class="form-check-label" for="isHired">
             ${ 'data.title.ishired' & t}
@@ -103,13 +105,15 @@
           class="btn btn-outline-warning"
           type="button"
           click.trigger="resetForm()"
-          disabled.bind="!hasValue">
+          disabled.bind="!hasValue"
+        >
           ${ 'base.reset' & t}
         </button>
-        <button 
-        class="btn btn-primary"
-        type="submit"
-        disabled.bind="controller.errors.length > 0 || !hasValue">
+        <button
+          class="btn btn-primary"
+          type="submit"
+          disabled.bind="!validator.isValid || hasEmptyValues"
+        >
           ${ (editMode ? 'base.update' : 'base.send') & t}
         </button>
       </div>
