Update -Validation -Localized Validation Error Strings (from server) -Fixes

--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/layout/main/layout-main.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/layout/main/layout-main.html
@@ -1,7 +1,7 @@
 <template>
   <require from="../header/layout-header"></require>
   <layout-header></layout-header>
-  <div class="container mt-4">
+  <div class="container-fluid mt-4">
     <router-view></router-view>
   </div>
 </template>
