--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/applicant/edit-applicant.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/applicant/edit-applicant.html
@@ -1,122 +1,142 @@
 <template>
-  <div class="container w-50 shadow-lg p-4 rounded">
-    <form submit.trigger="save()">
-      <div class="form-row">
-        <div class="col-md-4 mb-3">
-          <div class="form-group">
-            <label for="name">${ 'data.title.name' & t }</label>
-            <input
-              type="text"
-              class="form-control"
-              id="name"
-              placeholder="${ 'data.title.name' & t }"
-              value.bind="applicant.name & validate:validator.rules"
-              required
-            />
+  <div class="row flex-column-reverse flex-md-row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4 shadow p-4 rounded">
+      <form submit.trigger="save()">
+        <div class="form-row">
+          <div class="col-md-4 mb-3">
+            <div class="form-group">
+              <label for="name">${ 'data.title.name' & t }</label>
+              <input
+                type="text"
+                class="form-control"
+                id="name"
+                placeholder="${ 'data.title.name' & t }"
+                value.bind="applicant.name & validate:validator.rules"
+                required
+              />
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="form-group">
+              <label for="familyName">${ 'data.title.familyname' & t }</label>
+              <input
+                type="text"
+                class="form-control"
+                id="familyName"
+                placeholder="${ 'data.title.familyname' & t }"
+                value.bind="applicant.familyName & validate:validator.rules"
+                required
+              />
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="form-group">
+              <label for="validationServer03">${ 'data.title.age' & t }</label>
+              <input
+                type="number"
+                class="form-control"
+                id="validationServer03"
+                placeholder="${ 'data.title.age' & t }"
+                value.bind="applicant.age & validate:validator.rules"
+                required
+              />
+            </div>
           </div>
         </div>
-        <div class="col-md-6 mb-3">
-          <div class="form-group">
-            <label for="familyName">${ 'data.title.familyname' & t }</label>
-            <input
-              type="text"
-              class="form-control"
-              id="familyName"
-              placeholder="${ 'data.title.familyname' & t }"
-              value.bind="applicant.familyName & validate:validator.rules"
-              required
-            />
+        <div class="form-row">
+          <div class="col-md-12 mb-3">
+            <div class="form-group">
+              <label for="emailAddress"
+                >${ 'data.title.emailaddress' & t }</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="emailAddress"
+                placeholder="${ 'data.title.emailaddress' & t }"
+                value.bind="applicant.emailAddress & validate:validator.rules"
+                required
+              />
+            </div>
           </div>
         </div>
-        <div class="col-md-2 mb-3">
-          <div class="form-group">
-            <label for="validationServer03">${ 'data.title.age' & t }</label>
-            <input
-              type="text"
-              class="form-control"
-              id="validationServer03"
-              placeholder="${ 'data.title.age' & t }"
-              value.bind="applicant.age & validate:validator.rules"
-              required
-            />
+        <div class="form-row">
+          <div class="col-md-8 mb-3">
+            <div class="form-group">
+              <label for="validationServer04"
+                >${ 'data.title.address' & t}</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="validationServer04"
+                placeholder="${ 'data.title.address' & t}"
+                value.bind="applicant.address & validate:validator.rules"
+                required
+              />
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="form-group">
+              <label for="validationServer05"
+                >${ 'data.title.countryoforigin' & t}</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="validationServer05"
+                placeholder="${ 'data.title.countryoforigin' & t}"
+                value.bind="applicant.countryOfOrigin & validate:validator.rules"
+                required
+              />
+            </div>
           </div>
         </div>
+        <div class="form-group">
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="isHired"
+              checked.bind="applicant.hired & validate:validator.rules"
+            />
+            <label class="form-check-label" for="isHired">
+              ${ 'data.title.ishired' & t}
+            </label>
+          </div>
+        </div>
+        <div class="form-group text-right">
+          <button
+            class="btn btn-outline-warning"
+            type="button"
+            click.trigger="resetForm()"
+            disabled.bind="!hasValue"
+          >
+            ${ 'base.reset' & t}
+          </button>
+          <button
+            class="btn btn-primary"
+            type="submit"
+          >
+            ${ (editMode ? 'base.update' : 'base.send') & t}
+          </button>
+        </div>
+      </form>
+    </div>
+    <div class="col-md-4" if.bind="validationErrors">
+      <div class="alert alert-danger" role="alert">
+        <ul>
+          <li repeat.for="error of errors">
+            ${'data.title.' + error[0].toLowerCase() & t}
+            <ul>
+              <li repeat.for="val of error[1]">
+                ${val.split('|')[0] & t: {'param': val.split('|')[1]}}
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
-      <div class="form-row">
-        <div class="col-md-12 mb-3">
-          <div class="form-group">
-            <label for="emailAddress">${ 'data.title.emailaddress' & t }</label>
-            <input
-              type="text"
-              class="form-control"
-              id="emailAddress"
-              placeholder="${ 'data.title.emailaddress' & t }"
-              value.bind="applicant.emailAddress & validate:validator.rules"
-              required
-            />
-          </div>
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="col-md-8 mb-3">
-          <div class="form-group">
-            <label for="validationServer04">${ 'data.title.address' & t}</label>
-            <input
-              type="text"
-              class="form-control"
-              id="validationServer04"
-              placeholder="${ 'data.title.address' & t}"
-              value.bind="applicant.address & validate:validator.rules"
-              required
-            />
-          </div>
-        </div>
-        <div class="col-md-4 mb-3">
-          <div class="form-group">
-            <label for="validationServer05"
-              >${ 'data.title.countryoforigin' & t}</label
-            >
-            <input
-              type="text"
-              class="form-control"
-              id="validationServer05"
-              placeholder="${ 'data.title.countryoforigin' & t}"
-              value.bind="applicant.countryOfOrigin & validate:validator.rules"
-              required
-            />
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-check">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="isHired"
-            checked.bind="applicant.hired & validate:validator.rules"
-          />
-          <label class="form-check-label" for="isHired">
-            ${ 'data.title.ishired' & t}
-          </label>
-        </div>
-      </div>
-      <div class="form-group text-right">
-        <button
-          class="btn btn-outline-warning"
-          type="button"
-          click.trigger="resetForm()"
-          disabled.bind="!hasValue"
-        >
-          ${ 'base.reset' & t}
-        </button>
-        <button
-          class="btn btn-primary"
-          type="submit"
-          disabled.bind="!validator.isValid || hasEmptyValues"
-        >
-          ${ (editMode ? 'base.update' : 'base.send') & t}
-        </button>
-      </div>
-    </form>
+    </div>
   </div>
 </template>
