--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/applicant/edit-applicant.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/applicant/edit-applicant.html
@@ -1,4 +1,5 @@
 <template>
+  <require from="../shared/spinner/spinner"></require>
   <div class="row flex-column-reverse flex-md-row">
     <div class="col-md-4"></div>
     <div class="col-md-4 shadow p-4 rounded">
@@ -13,7 +14,6 @@
                 id="name"
                 placeholder="${ 'data.title.name' & t }"
                 value.bind="applicant.name & validate:validator.rules"
-                required
               />
             </div>
           </div>
@@ -26,20 +26,18 @@
                 id="familyName"
                 placeholder="${ 'data.title.familyname' & t }"
                 value.bind="applicant.familyName & validate:validator.rules"
-                required
               />
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="form-group">
-              <label for="validationServer03">${ 'data.title.age' & t }</label>
+              <label for="age">${ 'data.title.age' & t }</label>
               <input
-                type="number"
+                type="text"
                 class="form-control"
-                id="validationServer03"
+                id="age"
                 placeholder="${ 'data.title.age' & t }"
                 value.bind="applicant.age & validate:validator.rules"
-                required
               />
             </div>
           </div>
@@ -56,7 +54,6 @@
                 id="emailAddress"
                 placeholder="${ 'data.title.emailaddress' & t }"
                 value.bind="applicant.emailAddress & validate:validator.rules"
-                required
               />
             </div>
           </div>
@@ -73,7 +70,6 @@
                 id="validationServer04"
                 placeholder="${ 'data.title.address' & t}"
                 value.bind="applicant.address & validate:validator.rules"
-                required
               />
             </div>
           </div>
@@ -88,7 +84,6 @@
                 id="validationServer05"
                 placeholder="${ 'data.title.countryoforigin' & t}"
                 value.bind="applicant.countryOfOrigin & validate:validator.rules"
-                required
               />
             </div>
           </div>
@@ -118,7 +113,9 @@
           <button
             class="btn btn-primary"
             type="submit"
+            disabled.bind="!hasValue || hasEmptyValues || !validator.isValid || isRequesting"
           >
+          <spinner></spinner>
             ${ (editMode ? 'base.update' : 'base.send') & t}
           </button>
         </div>
