--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/shared/dialogs/confirm-dialog.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/shared/dialogs/confirm-dialog.html
@@ -1,8 +1,14 @@
 <template>
-  <require from="./confirm-dialog.css"></require>
+  <require from="./dialog.css"></require>
   <ux-dialog>
+    <ux-dialog-header>${ data.title & t}</ux-dialog-header>
     <ux-dialog-body>
-      dialog works
+      ${ data.text & t}
+      <i>${data.value}</i>
     </ux-dialog-body>
+    <ux-dialog-footer>
+      <button click.trigger="controller.cancel()">${ 'base.cancel' & t}</button>
+      <button click.trigger="controller.ok(true)">${ 'base.confirm' & t}</button>
+    </ux-dialog-footer>
   </ux-dialog>
 </template>
