--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/applicant/edit-applicant.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/applicant/edit-applicant.html
@@ -113,7 +113,7 @@
           <button
             class="btn btn-primary"
             type="submit"
-            disabled.bind="!hasValue || hasEmptyValues || !validator.isValid || isRequesting"
+            disabled.bind="!hasValue || hasEmptyFields || !validator.isValid || isRequesting"
           >
           <spinner if.bind="isRequesting"></spinner>
             ${ (editMode ? 'base.update' : 'base.send') & t}
