Update -Validation Response fix -Code Cleanup -Redirecting to view after sending the form

--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/layout/header/layout-header.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/layout/header/layout-header.html
@@ -32,7 +32,7 @@
           </div>
         </li>
         <li class="nav-item">          
-          <a class="nav-link" href="#/about">${ 'header.routes.about' & t}</a>
+          <a class="nav-link" href="#/about">${ 'routes.about' & t}</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href.bind="swaggerUrl" target="_blank">${ 'header.swaggerui' & t}</a>
