--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/applicant/edit-applicant.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/applicant/edit-applicant.html
@@ -1,121 +1,74 @@
 <template>
   <require from="../shared/spinner/spinner"></require>
-  <div class="row flex-column-reverse flex-md-row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4 shadow p-4 rounded">
+  <div class="row">
+    <div class="col-md-6 shadow p-4 rounded m-auto">
       <form submit.trigger="save()">
         <div class="form-row">
           <div class="col-md-4 mb-3">
             <div class="form-group">
               <label for="name">${ 'data.title.name' & t }</label>
-              <input
-                type="text"
-                class="form-control"
-                id="name"
-                placeholder="${ 'data.title.name' & t }"
-                value.bind="applicant.name & validate:validator.rules"
-              />
+              <input type="text" class="form-control" id="name" placeholder="${ 'data.title.name' & t }"
+                value.bind="applicant.name & validate:validator.rules" />
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="form-group">
               <label for="familyName">${ 'data.title.familyname' & t }</label>
-              <input
-                type="text"
-                class="form-control"
-                id="familyName"
-                placeholder="${ 'data.title.familyname' & t }"
-                value.bind="applicant.familyName & validate:validator.rules"
-              />
+              <input type="text" class="form-control" id="familyName" placeholder="${ 'data.title.familyname' & t }"
+                value.bind="applicant.familyName & validate:validator.rules" />
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="form-group">
               <label for="age">${ 'data.title.age' & t }</label>
-              <input
-                type="text"
-                class="form-control"
-                id="age"
-                placeholder="${ 'data.title.age' & t }"
-                value.bind="applicant.age & validate:validator.rules"
-              />
+              <input type="text" class="form-control" id="age" placeholder="${ 'data.title.age' & t }"
+                value.bind="applicant.age & validate:validator.rules" />
             </div>
           </div>
         </div>
         <div class="form-row">
           <div class="col-md-12 mb-3">
             <div class="form-group">
-              <label for="emailAddress"
-                >${ 'data.title.emailaddress' & t }</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="emailAddress"
-                placeholder="${ 'data.title.emailaddress' & t }"
-                value.bind="applicant.emailAddress & validate:validator.rules"
-              />
+              <label for="emailAddress">${ 'data.title.emailaddress' & t }</label>
+              <input type="text" class="form-control" id="emailAddress" placeholder="${ 'data.title.emailaddress' & t }"
+                value.bind="applicant.emailAddress & validate:validator.rules" />
             </div>
           </div>
         </div>
         <div class="form-row">
           <div class="col-md-8 mb-3">
             <div class="form-group">
-              <label for="address"
-                >${ 'data.title.address' & t}</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="address"
-                placeholder="${ 'data.title.address' & t}"
-                value.bind="applicant.address & validate:validator.rules"
-              />
+              <label for="address">${ 'data.title.address' & t}</label>
+              <input type="text" class="form-control" id="address" placeholder="${ 'data.title.address' & t}"
+                value.bind="applicant.address & validate:validator.rules" />
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="form-group">
-              <label for="countryOfOrigin"
-                >${ 'data.title.countryoforigin' & t}</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="countryOfOrigin"
+              <label for="countryOfOrigin">${ 'data.title.countryoforigin' & t}</label>
+              <input type="text" class="form-control" id="countryOfOrigin"
                 placeholder="${ 'data.title.countryoforigin' & t}"
-                value.bind="applicant.countryOfOrigin & validate:validator.rules"
-              />
+                value.bind="applicant.countryOfOrigin & validate:validator.rules" />
             </div>
           </div>
         </div>
         <div class="form-group">
           <div class="form-check">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              id="isHired"
-              checked.bind="applicant.hired"
-            />
+            <input class="form-check-input" type="checkbox" id="isHired" value.bind="applicant.hired"
+              checked.bind="applicant.hired" />
+
             <label class="form-check-label" for="isHired">
               ${ 'data.title.ishired' & t}
             </label>
           </div>
         </div>
         <div class="form-group text-right">
-          <button
-            class="btn btn-outline-warning"
-            type="button"
-            click.trigger="resetForm()"
-            disabled.bind="!hasValue"
-          >
+          <button class="btn btn-outline-warning" type="button" click.trigger="resetForm()" disabled.bind="!hasValue">
             ${ 'base.reset' & t}
           </button>
-          <button
-            class="btn btn-primary"
-            type="submit"
-            disabled.bind="!hasValue || hasEmptyFields || !validator.isValid || isRequesting"
-          >
-          <spinner if.bind="isRequesting"></spinner>
+          <button class="btn btn-primary" type="submit"
+            disabled.bind="!hasValue || hasEmptyFields || !validator.isValid || isRequesting">
+            <spinner if.bind="isRequesting"></spinner>
             ${ (editMode ? 'base.update' : 'base.send') & t}
           </button>
         </div>
