--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/styles.css
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/styles.css
@@ -17,3 +17,21 @@ body {
   height: 20px;
 }
 
+.iconify-rotate {
+  animation: spin .8s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.input-spinner {
+  background-image: url(assets/images/spinner-input.svg);
+  background-repeat: no-repeat;
+  background-position: right calc(-1rem) center;
+}
