--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/applicant/list-applicant.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/applicant/list-applicant.html
@@ -8,22 +8,14 @@
             <span class="iconify" data-icon="codicon:search" data-inline="false"></span>
           </span>
         </div>
-        <input
-         type="text"
-         class="form-control" 
-         placeholder="${'base.search' & t}..." 
-         aria-label="${'base.search' & t}..." aria-describedby="search-icon"
-         value.bind="searchTerm"
-         input.delegate="handleSearch()"
-         disabled.bind="isRequesting || applicants.length === 0"
-         >
+        <input type="text" class="form-control" placeholder="${'base.search' & t}..."
+          aria-label="${'base.search' & t}..." aria-describedby="search-icon" value.bind="searchTerm"
+          input.delegate="handleSearch()" disabled.bind="isRequesting || applicants.length === 0">
       </div>
     </div>
     <div class="col-6 text-right">
-      <button type="button" class="btn btn-icon btn-outline-info" 
-      click.trigger="loadData()"
-      disabled.bind="isRequesting"
-      >
+      <button type="button" class="btn btn-icon btn-outline-info" click.trigger="loadData()"
+        disabled.bind="isRequesting">
         <span class="iconify" data-icon="ic:twotone-refresh" data-inline="false"></span>
       </button>
       <a class="btn btn-outline-success" href="#/applicant/edit">${'base.new' & t}</a>
@@ -53,7 +45,10 @@
               </td>
             </tr>
             <tr if.bind="!isRequesting && isError">
-              <td colspan="9">Error will be here</td>
+              <td colspan="9">
+                ${ 'base.something_went_wrong' & t}
+                <btn class="btn btn-link" click.trigger="loadData()">${ 'base.try_again' & t}</button>
+              </td>
             </tr>
             <tr if.bind="!isRequesting && !isError" repeat.for="applicant of filteredApplicants">
               <td>${applicant.id}</td>
@@ -67,9 +62,10 @@
                 ${('base.' + (applicant.hired ? 'yes': 'no')) & t}
               </td>
               <td>
-                <a href="#/applicant/edit/${applicant.id}">${'base.edit' & t}</a>
-                /
-                <a href="#" click.trigger="delete(applicant.id, applicant.name)">${'base.delete' & t}</a>
+                <a href="#/applicant/edit/${applicant.id}" title="${'base.edit' & t}"><span class="iconify"
+                    data-icon="clarity:edit-line" data-inline="false"></span></a>
+                <a href="#" click.trigger="delete(applicant.id, applicant.name)" title="${'base.delete' & t}"><span
+                    class="iconify text-danger" data-icon="fluent:delete-28-regular" data-inline="false"></span></a>
               </td>
             </tr>
           </tbody>
