--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/layout/header/layout-header.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/components/layout/header/layout-header.html
@@ -1,6 +1,6 @@
 <template>
   <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
-    <a class="navbar-brand" href="#" i18n="$t(base.no)">Navbar</a>
+    <a class="navbar-brand" href="#">${'base.app_name' & t}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
